--- a/LSI Project GUI/LSI Project GUI/LSIProjectGUI.ui
+++ b/LSI Project GUI/LSI Project GUI/LSIProjectGUI.ui
@@ -15,7 +15,7 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(125, 216, 255);</string>
+    <string notr="true">background-color: rgb(17, 132, 255);</string>
    </property>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
@@ -86,7 +86,8 @@ background-color: rgb(150, 223, 111);</string>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 117, 19);</string>
+     <string notr="true">background-color: rgb(255, 137, 58);
+font: 75 11pt &quot;Segoe UI Light&quot;;</string>
     </property>
     <property name="text">
      <string>Stop</string>
@@ -101,6 +102,10 @@ background-color: rgb(150, 223, 111);</string>
       <height>61</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(170, 85, 127);
+font: 75 11pt &quot;Segoe UI Light&quot;;</string>
+    </property>
     <property name="text">
      <string>create ROI</string>
     </property>
@@ -114,6 +119,10 @@ background-color: rgb(150, 223, 111);</string>
       <height>61</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 170, 255);
+font: 75 11pt &quot;Segoe UI Light&quot;;</string>
+    </property>
     <property name="text">
      <string>remove ROI</string>
     </property>
@@ -126,6 +135,9 @@ background-color: rgb(150, 223, 111);</string>
       <width>191</width>
       <height>161</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
     <property name="widgetResizable">
      <bool>true</bool>
@@ -148,6 +160,9 @@ background-color: rgb(150, 223, 111);</string>
         <height>141</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(170, 255, 255);</string>
+      </property>
      </widget>
     </widget>
    </widget>
@@ -156,9 +171,12 @@ background-color: rgb(150, 223, 111);</string>
      <rect>
       <x>620</x>
       <y>180</y>
-      <width>151</width>
+      <width>191</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 75 13pt &quot;Segoe UI Light&quot;;</string>
     </property>
     <property name="text">
      <string>Write patient comments:</string>
@@ -173,6 +191,9 @@ background-color: rgb(150, 223, 111);</string>
       <height>20</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(170, 255, 255);</string>
+    </property>
    </widget>
    <widget class="QLineEdit" name="patientAge">
     <property name="geometry">
@@ -182,6 +203,9 @@ background-color: rgb(150, 223, 111);</string>
       <width>113</width>
       <height>20</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(170, 255, 255);</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="PatientGender">
@@ -193,18 +217,56 @@ background-color: rgb(150, 223, 111);</string>
       <height>20</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(170, 255, 255);</string>
+    </property>
    </widget>
    <widget class="QLabel" name="nameLabel">
     <property name="geometry">
      <rect>
-      <x>650</x>
+      <x>646</x>
       <y>80</y>
-      <width>47</width>
-      <height>13</height>
+      <width>51</width>
+      <height>20</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 75 12pt &quot;Segoe UI Light&quot;;</string>
     </property>
     <property name="text">
      <string>Name:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>110</y>
+      <width>31</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 75 12pt &quot;Segoe UI Light&quot;;</string>
+    </property>
+    <property name="text">
+     <string>Age:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>140</y>
+      <width>61</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 75 12pt &quot;Segoe UI Light&quot;;</string>
+    </property>
+    <property name="text">
+     <string>Gender:</string>
     </property>
    </widget>
   </widget>
