--- a/LSI Project GUI/LSI Project GUI/LSIProjectGUI.ui
+++ b/LSI Project GUI/LSI Project GUI/LSIProjectGUI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>928</width>
-    <height>557</height>
+    <height>610</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,42 +17,13 @@
    <property name="styleSheet">
     <string notr="true">background-color: rgb(17, 132, 255);</string>
    </property>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QLabel" name="button_test">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>20</y>
-      <width>171</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Push Me!!</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="im_show">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>100</y>
-      <width>191</width>
-      <height>171</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Somthing might happen here!</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>270</y>
-      <width>111</width>
-      <height>61</height>
+      <x>490</x>
+      <y>400</y>
+      <width>141</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="text">
@@ -62,8 +33,8 @@
    <widget class="QPushButton" name="startButton">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>80</y>
+      <x>490</x>
+      <y>90</y>
       <width>141</width>
       <height>61</height>
      </rect>
@@ -79,8 +50,8 @@ background-color: rgb(150, 223, 111);</string>
    <widget class="QPushButton" name="stopButton">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>150</y>
+      <x>490</x>
+      <y>160</y>
       <width>141</width>
       <height>61</height>
      </rect>
@@ -96,8 +67,8 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
    <widget class="QPushButton" name="createROIButton">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>220</y>
+      <x>490</x>
+      <y>230</y>
       <width>141</width>
       <height>61</height>
      </rect>
@@ -113,8 +84,8 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
    <widget class="QPushButton" name="removeROIButton">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>300</y>
+      <x>490</x>
+      <y>310</y>
       <width>141</width>
       <height>61</height>
      </rect>
@@ -130,8 +101,8 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
    <widget class="QScrollArea" name="scrollArea">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>200</y>
+      <x>690</x>
+      <y>240</y>
       <width>191</width>
       <height>161</height>
      </rect>
@@ -169,8 +140,8 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
    <widget class="QLabel" name="commentsLabel">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>180</y>
+      <x>690</x>
+      <y>220</y>
       <width>191</width>
       <height>16</height>
      </rect>
@@ -185,8 +156,8 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
    <widget class="QLineEdit" name="patientName">
     <property name="geometry">
      <rect>
-      <x>700</x>
-      <y>80</y>
+      <x>770</x>
+      <y>120</y>
       <width>113</width>
       <height>20</height>
      </rect>
@@ -198,8 +169,8 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
    <widget class="QLineEdit" name="patientAge">
     <property name="geometry">
      <rect>
-      <x>700</x>
-      <y>110</y>
+      <x>770</x>
+      <y>150</y>
       <width>113</width>
       <height>20</height>
      </rect>
@@ -211,8 +182,8 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
    <widget class="QLineEdit" name="PatientGender">
     <property name="geometry">
      <rect>
-      <x>700</x>
-      <y>140</y>
+      <x>770</x>
+      <y>180</y>
       <width>113</width>
       <height>20</height>
      </rect>
@@ -224,8 +195,8 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
    <widget class="QLabel" name="nameLabel">
     <property name="geometry">
      <rect>
-      <x>646</x>
-      <y>80</y>
+      <x>716</x>
+      <y>120</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -237,11 +208,11 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
      <string>Name:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="ageLabel">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>110</y>
+      <x>730</x>
+      <y>150</y>
       <width>31</width>
       <height>21</height>
      </rect>
@@ -253,11 +224,11 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
      <string>Age:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QLabel" name="genderLabel">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>140</y>
+      <x>710</x>
+      <y>180</y>
       <width>61</width>
       <height>20</height>
      </rect>
@@ -267,6 +238,19 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
     </property>
     <property name="text">
      <string>Gender:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="videoLabel">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>30</y>
+      <width>441</width>
+      <height>471</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>The video will soon be displayed...</string>
     </property>
    </widget>
   </widget>
